# py-web-14

./: test.db
contacts_api/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test.db
contacts_api/alembic/: env.py
contacts_api/alembic/versions/: 34f4cf140f9a_add_created_at_to_user.py  5d85d1a0ad41_initial_migration.py  6bd83ff37325_add_confirmed_column_to_users.py  e002b76b9028_add_user_and_contact_models.py  e9b4d1922102_add_avatar.py
contacts_api/docs/: conf.py
contacts_api/docs/_build/doctrees/: environment.pickle  index.doctree
contacts_api/docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
contacts_api/docs/_build/html/_modules/: index.html
contacts_api/docs/_build/html/_modules/src/schemas/: contacts.html  users.html
contacts_api/docs/_build/html/_modules/src/services/: deps.html
contacts_api/docs/_build/html/_sources/: index.rst.txt
contacts_api/src/: main.py
contacts_api/src/conf/: config.py
contacts_api/src/database/: db.py  models.py
contacts_api/src/repository/: contacts.py  users.py
contacts_api/src/routes/: auth.py  contacts.py  users.py
contacts_api/src/schemas/: contacts.py  users.py
contacts_api/src/services/: auth.py  deps.py  email.py  security.py
contacts_api/tests/: __init__.py  conftest.py  test_auth_routes.py  test_contacts_routes.py  test_unit_repository_contacts.py  test_unit_repository_users.py
